# baekjoon-solutions

./: .gitignore  README.md  pyproject.toml  readme.md  template.py  test_solution.py
Docs/: algorithm_approach_structure.md  algorithm_core_topics.md  developer_growth_core.md
Docs/Topics/: 2. Mathmatics_and_Implementation.md
Implementation/: 1032_명령_프롬프트.py
Mathmatics/: 1009_분산처리.py  1037_약수.py  1075_나누기.py  17425_약수의_합.py  17427_약수의_합_2.py  1929_소수_구하기.py  6588_골드바흐의_추측.py
data_structures/dfs/: 14500_테트로미노.py
docs/: algorithm_core_topics.md  python_patterns.md
docs/topics/: 1. complexity.md
implementation/brute_force/: 1107_리모컨.py  14500_테트로미노.py  2309_일곱_난쟁이.py
implementation/brute_force/tests/: 14500_테트로미노_case.txt
implementation/dictionary/: 1076_저항.py
mathmatics/: 10430_나머지.py  1978_소수_찾기.py
src/: template.py
src/algorithms/dp/: 9095_1,2,3_더하기.py
src/implementation/brute_force/: 14500_테트로미노.py  1476_날짜_계산.py  1748_수_이어_쓰기_1.py  3085_사탕_게임.py  6064_카잉_달력.py
src/mathmatics/: 2609_최대공약수와_최소공배수.py  4375_1.py
tests/: test_solution.py
tests/cases/: 6064_카잉_달력_case.txt
