[tool.poetry]
name = "baekjoon-solutions"
version = "0.1.0"
description = ""
authors = ["knit <bks0901@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"